--- a/about.html
+++ b/about.html
@@ -85,19 +85,20 @@
 							<img class="img-fluid" src="img/crop.jpg" alt="">
 						</div>
 						<div class="col-lg-5 col-md-6 home-about-right">
-							<h6>About Me</h6>
 							<h1 class="text-uppercase">Personal Details</h1>
 							<p>
-								I want to build amazing things. I fit the pieces together to make connectable machine learning models that make web applications smarter.
+								I aspire to build amazing things. I fit the pieces together to make connectable machine learning models that make web applications smarter.
 							</p>
 							<a href="#FAQ" class="primary-btn text-uppercase">More About Me</a>
 						</div>
+
+
 						<div class="col-lg-12 pt-60">
 							<p>
-								I am currently a graduate student at University of Texas at Dallas studying Computer Science. After graduating with honors from Baylor University with a bachelors in mathematics and business, I moved to Plano, Texas. Since then I have been on a self guided curriculum, learning about machine learning algorithms, computer vision, and software architecture.
+								I am currently a graduate student at University of Texas at Dallas studying Computer Science. After graduating from Baylor University with a bachelors in mathematics and business, I moved to Plano, Texas. Since then I have been on a self guided curriculum, learning about machine learning algorithms, computer vision, and software architecture.
 							</p>
 							<p>
-								I am currently focusing my studies on recent advancements in computer vision utilizing deep learning. Particularly the use of convolutional neural networks for video understanding. Over the next few months I hope to implement convnets in RESTful web services and drone flight control programs.
+								I am currently focusing my studies on the recent advancements in computer vision utilizing deep learning. Particularly the use of convolutional neural networks for video understanding. Over the next few months I hope to implement convnets in RESTful web services and drone flight control programs.
 							</p>
 
 						</div>
@@ -107,9 +108,10 @@
 					<hr>
 
 
-				<section class="faq-area pb-80 pt-80">
+					<section class="home-about-area section-gap">
+
 							<div class="text-center">
-									<div class="menu-content pb-40">
+									<div class="menu-content">
 											<div class="title text-center">
 													<h1 class="mb-10">Skills Expertisse</h1>
 											</div>
@@ -119,78 +121,84 @@
 
 
 
-					<div class="row skillbar-wraps">
-						<div class="col-lg-4 skill-left">
-							<h4 class="text-center"> Devops </h4>
-							<div class="single-skill">
-								<p>
-									Server Management (Linux, SSH, etc.) 60%
-								</p>
-								<div class="skill" data-width="60"></div>
+
+
+
+
+
+						<div class="row skillbar-wraps">
+							<div class="col-lg-4 skill-left">
+								<h4 class="text-center pt-50"> Devops </h4>
+								<div class="single-skill">
+									<p>
+										Server Management (Linux / Flask) 60%
+									</p>
+									<div class="skill" data-width="60"></div>
+								</div>
+								<div class="single-skill">
+									<p>
+										Containerization (Docker) 50%
+									</p>
+									<div class="skill" data-width="50"></div>
+								</div>
+								<div class="single-skill">
+									<p>
+										Cluster Computing (Spark / Hive) 20%
+									</p>
+									<div class="skill" data-width="20"></div>
+								</div>
 							</div>
-							<div class="single-skill">
-								<p>
-									Containerization (Docker) 50%
-								</p>
-								<div class="skill" data-width="50"></div>
+
+
+							<div class="col-lg-4 skill-right">
+								<h4 class="text-center pt-50"> Data Science </h4>
+								<div class="single-skill">
+									<p>
+										Python 85%
+									</p>
+									<div class="skill" data-width="85"></div>
+								</div>
+
+								<div class="single-skill">
+									<p>
+										Macing Learning Frameworks 70%
+									</p>
+									<div class="skill" data-width="70"></div>
+								</div>
+								<div class="single-skill">
+									<p>
+										Data Processing and Visualizations 80%
+									</p>
+									<div class="skill" data-width="80"></div>
+								</div>
 							</div>
-							<div class="single-skill">
-								<p>
-									Cluster Computing (Spark, Hive, etc.) 20%
-								</p>
-								<div class="skill" data-width="20"></div>
+
+							<div class="col-lg-4 skill-right">
+								<h4 class="text-center pt-50">Front-end Development</h4>
+								<div class="single-skill">
+									<p>
+										HTML / CSS 50%
+									</p>
+									<div class="skill" data-width="50"></div>
+								</div>
+
+								<div class="single-skill">
+									<p>
+										Front-end Frameworks 20%
+									</p>
+									<div class="skill" data-width="20"></div>
+								</div>
+								<div class="single-skill">
+									<p>
+										JavaScript 20%
+									</p>
+									<div class="skill" data-width="20"></div>
+								</div>
 							</div>
+
 						</div>
 
-
-						<div class="col-lg-4 skill-right">
-							<h4 class="text-center"> Data Science </h4>
-							<div class="single-skill">
-								<p>
-									Python 85%
-								</p>
-								<div class="skill" data-width="85"></div>
-							</div>
-
-							<div class="single-skill">
-								<p>
-									ML Frameworks (Tensorflow, Scikit Learn, etc.) 70%
-								</p>
-								<div class="skill" data-width="70"></div>
-							</div>
-							<div class="single-skill">
-								<p>
-									Data Processing and Visualizations 80%
-								</p>
-								<div class="skill" data-width="80"></div>
-							</div>
-						</div>
-
-						<div class="col-lg-4 skill-right">
-							<h4 class="text-center">Front-end Development</h4>
-							<div class="single-skill">
-								<p>
-									HTML / CSS 50%
-								</p>
-								<div class="skill" data-width="50"></div>
-							</div>
-
-							<div class="single-skill">
-								<p>
-									Bootstrap 20%
-								</p>
-								<div class="skill" data-width="20"></div>
-							</div>
-							<div class="single-skill">
-								<p>
-									JavaScript 20%
-								</p>
-								<div class="skill" data-width="20"></div>
-							</div>
-						</div>
-
-					</div>
-				</section>
+					</section>
 
 
 
@@ -214,7 +222,7 @@
 			          <time>Bachelors in Mathematics and Business</time>
 			        </h4>
 			        <p><b>Baylor University 2017</b></p>
-			        <p><b>GPA:</b> 3.86 (In the Scale of 4.00)</p>
+			        <p><b>GPA:</b> 3.86 (On a scale of 4.00)</p>
 			      </div>
 			    </li>
 			    <li>
@@ -236,15 +244,14 @@
 			        <p>Expected graduation: Fall 2019</p>
 			      </div>
 			    </li>
-					<br>
+
 			  </ul>
 			</section>
 			<hr id="FAQ">
-			<br>
-			<br>
+
 
 			<!-- End timeline Area -->
-			<section class="faq-area pb-80 pt-60">
+			<section class="faq-area pb-80 pt-80">
 							<div class="container">
 								<div class="row d-flex justify-content-center">
 									<div class="menu-content pb-40 col-lg-8">
@@ -260,7 +267,7 @@
 											<a href="" class="active">Why did you make this website?</a>
 										</dt>
 										<dd style="display: block;">
-										I built this website to share my projects and motivations with others. In doing this, I hope to show my experience and interest in machine learning and web application development. As an added benefit of making this site, I was able to develop my front-end web design skill in setting the layout, as well as my back-end development skills by hosting this site on Digital Ocean.
+										I built this website to share my projects and motivations with others. In doing this, I hope to show my experience and interest in computer vision and web application development. As an added benefit of making this site, I was able to develop my front-end web design skills in setting the layout, as well as my back-end development skills by hosting this site on DigitalOcean.
 
 										</dd>
 
@@ -275,7 +282,7 @@
 											<a href="">Do you have any experience with database management?</a>
 										</dt>
 										<dd style="display: none;">
-										Though I have had experience with scraping, cleaning, and storing datasets locally, I have not had exposure to any of the major database systems. I intend to work more with MongoDB and MySQL as soon as I come to a project that would benefit from having used these tools.
+										Though I have had experience with scraping, cleaning, and storing datasets locally, I have not had exposure to any of the major database systems. I intend to work more with MySQL and MongoDB as soon as I come to a project that would benefit from having used these tools.
 																			</dd>
 
 
@@ -291,7 +298,7 @@
 											<a href="">What industry are you looking to work in?</a>
 										</dt>
 										<dd style="display: none;">
-										I am very interested in web application development. I am drawn towards the industry's focus on rapid improvement, innovation, and team-oriented creativity. Furthermore, I think when it comes to improving existing technologies there is a great deal of low-hanging fruit to be reached thanks to the movement towards microservices and docker containerization.
+										I am very interested in web application development. I am drawn towards the industry's focus on rapid improvement, innovation, and team-oriented creativity. Furthermore, I think when it comes to improving existing technologies there is a great deal of low-hanging fruit to be reached thanks to the movement towards microservice architecture and docker containerization. These developments make machine learning more integrable than ever.
 										</dd>
 
 
@@ -299,7 +306,7 @@
 										<a href=""> What kind of work do you see yourself doing? </a>
 									</dt>
 									<dd style="display: none;">
-									I am interested in building modular machine learning applications that can communicate with the backend architectures of existing applications. The titles for these positions are often very vague, so I like to describe my perfect future position to be a mix of data science, machine learning engineering, and devops. Essentially a computer vision specialist with the skills to deploy a model application to production.
+									I am interested in building modular machine learning applications that can communicate with the backend architectures of existing applications. Position titles that do this work are not well defined, so I like to describe my perfect future position to be a mix of data science, machine learning engineering, and devops. Essentially a computer vision specialist with the skills to deploy a model application to production.
 									</dd>
 								</dl>
 
