--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 								Machine learning, backend development, and computer vision specialist.
 							</p>
 
-							<a href="#portfolio" class="primary-btn text-uppercase">My Projects</a>
+							<a href="#portfolio" class="primary-btn text-uppercase mb-20">My Projects</a>
 						</div>
-						<div class="col-lg-6 col-md-6 banner-right d-flex align-self-end">
-							<img class="img-fluid" src="img/crop.jpg" >
+						<div class="col-lg-6 col-md-6 banner-right d-flex align-self-center">
+							<img src="img/crop.jpg">
 						</div>
 					</div>
 				</div>
@@ -83,7 +83,7 @@
 			<!-- End banner Area -->
 
 			<!-- Start home-about Area -->
-			<section class="home-about-area pt-120">
+			<section class="home-about-area section-gap">
 				<div class="container">
 					<div class="row align-items-center justify-content-between">
 
@@ -93,7 +93,7 @@
 							<br>
 
 							<blockquote class="generic-blockquote">
-								<p>I am passionate about applying new technologies to create amazing things. Siri, Google Assistant, and Amazon Alexa are all examples of what dedicated and curious people can achieve in the dizzying advancements of our time. With a strong understanding of mathematics and rich experiences in computer vision, I aim to be a part of the team of makers and innovators.
+								<p>I am passionate about applying new technologies to create amazing things. Siri, Google Assistant, and Amazon Alexa are all examples of what dedicated and curious people can achieve in the dizzying advancements of our time. With a strong understanding of mathematics and rich experiences in computer vision, I aim to be part of the team of makers and innovators.
 							</p>
 							</blockquote>
 							<a href="about.html" class="primary-btn text-uppercase">About me</a>
@@ -103,8 +103,9 @@
 			</section>
 			<!-- End home-about Area -->
 
-
-
+<div clss="container">
+<hr>
+</div>
 			<!-- Start services Area -->
 			<section class="services-area section-gap">
 				<div class="container">
@@ -123,7 +124,7 @@
 								<span class="lnr lnr-chart-bars"></span>
 								<a><h4>Data Analytics</h4></a>
 								<p>
-									The first step in building amazing machine learning applications is collecting and understanding the data.
+									The first step in building amazing machine learning applications is collecting and understanding data.
 								</p>
 							</div>
 						</div>
@@ -133,7 +134,7 @@
 								<span class="lnr lnr-eye"></span>
 								<a><h4>Computer Vision</h4></a>
 								<p>
-									I build intelligent systems that can understand, describe, and interact with the world.
+									I build intelligent systems that use images and video data to understand, describe, and interact with the world.
 								</p>
 							</div>
 						</div>
@@ -143,7 +144,7 @@
 								<span class="lnr lnr-graduation-hat"></span>
 								<a><h4>Machine Learning</h4></a>
 								<p>
-									I have a deep understanding of the mathematics and best practices that make machine learning applicable to the world.
+									I have a deep understanding of the mathematics and best practices that make machine learning applications successful.
 								</p>
 							</div>
 						</div>
@@ -161,18 +162,18 @@
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
 								<span class="lnr lnr-laptop-phone"></span>
-								<a><h4>Web App Design</h4></a>
+								<a><h4>Web App Development</h4></a>
 								<p>
-									The modularity of web applications is perfect for communicating with a containerized machine learning model.
+									I build front-end interfaces and harness machine learning to make web apps that bring value to everyone.
 								</p>
 							</div>
 						</div>
 						<div class="col-lg-4 col-md-6">
 							<div class="single-services">
 								<span class="lnr lnr-database"></span>
-								<a><h4>Backend Design</h4></a>
+								<a><h4>Backend Development</h4></a>
 								<p>
-									Knowing how to make your models interface with existing systems is a crucial and often overlooked skill.
+									The apps that make our lives easier rely on a great network of interconnected systems.
 								</p>
 							</div>
 						</div>
@@ -184,15 +185,17 @@
 
 
 
-<section class="home-about-area section-gap">
+	<hr>
+	<section class="home-about-area section-gap">
 
-		<div class="text-center">
-				<div class="menu-content pb-40">
-						<div class="title text-center">
-								<h1 class="mb-10">Skills Expertisse</h1>
-						</div>
-				</div>
-		</div>
+			<div class="text-center">
+					<div class="menu-content">
+							<div class="title text-center">
+									<h1 class="mb-10">Skills Expertisse</h1>
+							</div>
+					</div>
+			</div>
+
 
 
 
@@ -201,82 +204,85 @@
 
 
 <div class="container">
+		<div class="row skillbar-wraps">
+			<div class="col-lg-4 skill-left">
+				<h4 class="text-center pt-50"> Devops </h4>
+				<div class="single-skill">
+					<p>
+						Server Management (Linux / Flask) 60%
+					</p>
+					<div class="skill" data-width="60"></div>
+				</div>
+				<div class="single-skill">
+					<p>
+						Containerization (Docker) 50%
+					</p>
+					<div class="skill" data-width="50"></div>
+				</div>
+				<div class="single-skill">
+					<p>
+						Cluster Computing (Spark / Hive) 20%
+					</p>
+					<div class="skill" data-width="20"></div>
+				</div>
+			</div>
 
-	<div class="row skillbar-wraps">
-		<div class="col-lg-4 skill-left">
-			<h4 class="text-center"> Devops </h4>
-			<div class="single-skill">
-				<p>
-					Server Management (Linux, SSH, etc.) 60%
-				</p>
-				<div class="skill" data-width="60"></div>
+
+			<div class="col-lg-4 skill-right">
+				<h4 class="text-center pt-50"> Data Science </h4>
+				<div class="single-skill">
+					<p>
+						Python 85%
+					</p>
+					<div class="skill" data-width="85"></div>
+				</div>
+
+				<div class="single-skill">
+					<p>
+						Machine Learning Frameworks 70%
+					</p>
+					<div class="skill" data-width="70"></div>
+				</div>
+				<div class="single-skill">
+					<p>
+						Data Processing and Visualizations 80%
+					</p>
+					<div class="skill" data-width="80"></div>
+				</div>
 			</div>
-			<div class="single-skill">
-				<p>
-					Containerization (Docker) 50%
-				</p>
-				<div class="skill" data-width="50"></div>
+
+			<div class="col-lg-4 skill-right">
+				<h4 class="text-center pt-50">Front-end Development</h4>
+				<div class="single-skill">
+					<p>
+						HTML / CSS 50%
+					</p>
+					<div class="skill" data-width="50"></div>
+				</div>
+
+				<div class="single-skill">
+					<p>
+						Front-end Frameworks 20%
+					</p>
+					<div class="skill" data-width="20"></div>
+				</div>
+				<div class="single-skill">
+					<p>
+						JavaScript 20%
+					</p>
+					<div class="skill" data-width="20"></div>
+				</div>
 			</div>
-			<div class="single-skill">
-				<p>
-					Cluster Computing (Spark, Hive, etc.) 20%
-				</p>
-				<div class="skill" data-width="20"></div>
-			</div>
+
 		</div>
-
-
-		<div class="col-lg-4 skill-right">
-			<h4 class="text-center"> Data Science </h4>
-			<div class="single-skill">
-				<p>
-					Python 85%
-				</p>
-				<div class="skill" data-width="85"></div>
-			</div>
-
-			<div class="single-skill">
-				<p>
-					ML Frameworks (Tensorflow, Scikit Learn, etc.) 70%
-				</p>
-				<div class="skill" data-width="70"></div>
-			</div>
-			<div class="single-skill">
-				<p>
-					Data Processing and Visualizations 80%
-				</p>
-				<div class="skill" data-width="80"></div>
-			</div>
-		</div>
-
-		<div class="col-lg-4 skill-right">
-			<h4 class="text-center">Front-end Development</h4>
-			<div class="single-skill">
-				<p>
-					HTML / CSS 50%
-				</p>
-				<div class="skill" data-width="50"></div>
-			</div>
-
-			<div class="single-skill">
-				<p>
-					Bootstrap 20%
-				</p>
-				<div class="skill" data-width="20"></div>
-			</div>
-			<div class="single-skill">
-				<p>
-					JavaScript 20%
-				</p>
-				<div class="skill" data-width="20"></div>
-			</div>
-		</div>
-
 	</div>
 
-</section>
+	</section>
 
 
+<div class="container">
+	<hr>
+</div>
 
 
 			<section class="portfolio-area section-gap" id="portfolio">
@@ -364,7 +370,7 @@
 												<div class="relative">
 													<div class="thumb">
 														<div class="overlay overlay-bg"></div>
-														 <img class="image img-fluid" src="img/clustering.png" alt="">
+														 <img class="image img-fluid" src="img/brain.jpg" alt="">
 													</div>
 						<a href="Clustering.html">
 							<div class="middle">
@@ -404,7 +410,7 @@
 
 					</div>
 
-					<div class="container text-right">
+					<div class="container text-right mt-10">
 					<a href="archive.html" class="primary-btn text-uppercase">Project Archive</a>
 				</div>
 			</section>
