--- a/portfolio.html
+++ b/portfolio.html
@@ -160,7 +160,7 @@
 												<div class="relative">
 													<div class="thumb">
 														<div class="overlay overlay-bg"></div>
-														 <img class="image img-fluid" src="img/clustering.png" alt="">
+														 <img class="image img-fluid" src="img/brain.jpg" alt="">
 													</div>
 						<a href="Clustering.html">
 							<div class="middle">
@@ -200,11 +200,10 @@
 
 					</div>
 
-					<div class="container text-right">
+					<div class="container text-right mt-10">
 					<a href="archive.html" class="primary-btn text-uppercase">Project Archive</a>
 				</div>
 			</section>
-			<!-- End portfolio-area Area -->
 
 
 
