7/23 fixed image smooshing for mobile

--- a/Clustering.html
+++ b/Clustering.html
@@ -11800,7 +11800,7 @@ div#notebook {
   </nav>
 
   <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/brain.jpg')">
+  <header class="masthead" style="background-image: url('img/clustering.png')">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
