--- a/index.html
+++ b/index.html
@@ -65,17 +65,18 @@
 			<section class="banner-area">
 				<div class="container">
 					<div class="row fullscreen align-items-center justify-content-between">
-						<div class="col-lg-6 col-md-6 banner-left">
+						<div class="col-lg-6 col-md-6 col-xs-6 banner-left">
 							<h5>I am</h5>
-							<h1>Harrison Jansma</h1>
+
+							<h2 class="mt-10 mb-20">Harrison Jansma</h2>
 							<p>
 								Machine learning, backend development, and computer vision specialist.
 							</p>
 
 							<a href="#portfolio" class="primary-btn text-uppercase mb-20">My Projects</a>
 						</div>
-						<div class="col-lg-6 col-md-6 banner-right d-flex align-self-center">
-							<img src="img/crop.jpg">
+						<div class="col-lg-6 col-md-6 col-xs-6 banner-right d-flex align-self-center">
+							<img  class="img-fluid" src="img/cover2.jpg">
 						</div>
 					</div>
 				</div>
@@ -370,11 +371,11 @@
 												<div class="relative">
 													<div class="thumb">
 														<div class="overlay overlay-bg"></div>
-														 <img class="image img-fluid" src="img/brain.jpg" alt="">
+														 <img class="image img-fluid" src="img/clustering.png" alt="">
 													</div>
 						<a href="Clustering.html">
 							<div class="middle">
-								<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+								<div class="text justify-content-center d-flex"><img src="img/preview.png" alt=""></div>
 							</div>
 						</a>
 												</div>
