--- a/portfolio.html
+++ b/portfolio.html
@@ -160,7 +160,7 @@
 												<div class="relative">
 													<div class="thumb">
 														<div class="overlay overlay-bg"></div>
-														 <img class="image img-fluid" src="img/brain.jpg" alt="">
+														 <img class="image img-fluid" src="img/clustering.png" alt="">
 													</div>
 						<a href="Clustering.html">
 							<div class="middle">
