--- a/portfolio.html
+++ b/portfolio.html
@@ -88,7 +88,7 @@
 
 							<div class="filters">
 									<ul>
-											<li class="active" data-filter="*">All</li>
+											<li data-filter="*">All</li>
 											<li data-filter=".ComputerVision">Computer Vision</li>
 											<li data-filter=".NLP">NLP</li>
 											<li data-filter=".WebApps">Web Apps</li>
