--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 		<!-- Author Meta -->
 		<meta name="author" content="Harrison Jansma">
 		<!-- Meta Description -->
-		<meta name="description" content="portfolio">
+		<meta name="description" content="A personal website built and deployed by Harrison Jansma.">
 		<!-- Meta Keyword -->
 		<meta name="keywords" content="portfolio">
 		<!-- meta character set -->
