google maps fix

--- a/contact.html
+++ b/contact.html
@@ -206,5 +206,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<script src="js/owl.carousel.min.js"></script>
 			<script src="js/mail-script.js"></script>
 			<script src="js/main.js"></script>
+			<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPBZ0bBnFAWxyNBl_GW8NLdWwgbUTBPLs&callback=initMap" type="text/javascript"></script>
 		</body>
 	</html>
