Batch normalization and border fixes

--- a/Titanic.html
+++ b/Titanic.html
@@ -11768,7 +11768,7 @@ div#notebook {
     # body { margin:0; }
     </script>
 
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
@@ -11852,12 +11852,18 @@ div#notebook {
     $('div.input').hide()
   });
 </script>
-<form action="javascript:code_toggle()"><input type="submit" id="toggleButton" value="Show Code"></form>
+
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Titanic-Kaggle-Project">Titanic Kaggle Project<a class="anchor-link" href="#Titanic-Kaggle-Project">&#182;</a></h1><h2 id="Project-Description">Project Description<a class="anchor-link" href="#Project-Description">&#182;</a></h2><p>The sinking of the RMS Titanic is one of the most infamous shipwrecks in history.  On April 15, 1912, during her maiden voyage, the Titanic sank after colliding with an iceberg, killing 1502 out of 2224 passengers and crew. This sensational tragedy shocked the international community and led to better safety regulations for ships.</p>
+<h1 id="Titanic-Kaggle-Project">Titanic Kaggle Project<a class="anchor-link" href="#Titanic-Kaggle-Project">&#182;</a></h1>
+
+
+<br>
+<form action="javascript:code_toggle()"><input type="submit" id="toggleButton" value="Show Code"></form>
+
+<h2 id="Project-Description">Project Description<a class="anchor-link" href="#Project-Description">&#182;</a></h2><p>The sinking of the RMS Titanic is one of the most infamous shipwrecks in history.  On April 15, 1912, during her maiden voyage, the Titanic sank after colliding with an iceberg, killing 1502 out of 2224 passengers and crew. This sensational tragedy shocked the international community and led to better safety regulations for ships.</p>
 <p>One of the reasons that the shipwreck led to such loss of life was that there were not enough lifeboats for the passengers and crew. Although there was some element of luck involved in surviving the sinking, some groups of people were more likely to survive than others, such as women, children, and the upper-class.</p>
 <p>In this challenge, we ask you to complete the analysis of what sorts of people were likely to survive. In particular, we ask you to apply the tools of machine learning to predict which passengers survived the tragedy.</p>
 <p>For more info look at the following info.
