--- a/apple.html
+++ b/apple.html
@@ -11761,7 +11761,7 @@ div#notebook {
         }
     });
     </script>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
@@ -11850,12 +11850,16 @@ div#notebook {
     $('div.input').hide()
   });
 </script>
-<form action="javascript:code_toggle()"><input type="submit" id="toggleButton" value="Show Code"></form>
+
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Apple-Twitter-Sentiment-Analysis">Apple Twitter Sentiment Analysis<a class="anchor-link" href="#Apple-Twitter-Sentiment-Analysis">&#182;</a></h1><h2 id="0.1-Intent">0.1 Intent<a class="anchor-link" href="#0.1-Intent">&#182;</a></h2><p>In the following notebook we are going to be performing sentiment analysis on a collection of tweets about Apple Inc. The data can be obtained from the following link. After preprocessing, the tweets are labeled as either positive (i.e. I love my new iphone!) or negative. (i.e. Apple's customer service stinks!) We will conclude this write-up with an analysis of the words that are most indicative of a negative or positive tweet.</p>
+<h1 id="Apple-Twitter-Sentiment-Analysis">Apple Twitter Sentiment Analysis<a class="anchor-link" href="#Apple-Twitter-Sentiment-Analysis">&#182;</a></h1>
+
+<br>
+
+<form action="javascript:code_toggle()"><input type="submit" id="toggleButton" value="Show Code"></form><h2 id="0.1-Intent">0.1 Intent<a class="anchor-link" href="#0.1-Intent">&#182;</a></h2><p>In the following notebook we are going to be performing sentiment analysis on a collection of tweets about Apple Inc. The data can be obtained from the following link. After preprocessing, the tweets are labeled as either positive (i.e. I love my new iphone!) or negative. (i.e. Apple's customer service stinks!) We will conclude this write-up with an analysis of the words that are most indicative of a negative or positive tweet.</p>
 <p><a href="https://data.world/crowdflower/apple-twitter-sentiment">https://data.world/crowdflower/apple-twitter-sentiment</a></p>
 
 </div>
