--- a/index.html
+++ b/index.html
@@ -309,6 +309,28 @@
 
 							<div class="filters-content">
 									<div class="row grid">
+
+										<div class="single-portfolio col-sm-4 all ComputerVision">
+											<div class="relative">
+												<div class="thumb">
+													<div class="overlay overlay-bg"></div>
+													 <img class="image img-fluid" src="img/sig4square.png" alt="">
+												</div>
+					<a href="batchnorm.html">
+						<div class="middle">
+							<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
+						</div>
+				</a>
+											</div>
+				<div class="p-inner">
+					<a href="batchnorm.html">
+						<h5>Batch Normalization: Implement and Intuit</h5></a>
+					<div class="cat">July 27, 2018</div>
+				</div>
+										</div>
+
+
+
 											<div class="single-portfolio col-sm-4 all ComputerVision">
 												<div class="relative">
 													<div class="thumb">
@@ -327,6 +349,10 @@
 						<div class="cat">July 16, 2018</div>
 					</div>
 											</div>
+
+
+
+
 											<div class="single-portfolio col-sm-4 all NLP">
 												<div class="relative">
 													<div class="thumb">
