--- a/Clustering.html
+++ b/Clustering.html
@@ -11864,7 +11864,7 @@ div#notebook {
     $('div.input').hide()
   });
 </script>
-<form action="javascript:code_toggle()"><input type="submit" id="toggleButton" value="Show Code"></form>
+
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
@@ -11906,7 +11906,9 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="Import-the-Dataset-and-Preview">Import the Dataset and Preview<a class="anchor-link" href="#Import-the-Dataset-and-Preview">&#182;</a></h2><p>This data has been obtained from the link below.</p>
+<h2 id="Import-the-Dataset-and-Preview">Import the Dataset and Preview<a class="anchor-link" href="#Import-the-Dataset-and-Preview">&#182;</a></h2>
+
+<br> <form action="javascript:code_toggle()"><input type="submit" id="toggleButton" value="Show Code"></form><p>This data has been obtained from the link below.</p>
 <p><a href="https://www.kaggle.com/osmi/mental-health-in-tech-survey/data">https://www.kaggle.com/osmi/mental-health-in-tech-survey/data</a></p>
 
 </div>
