rewrote about section

--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
 						<div class="col-lg-5 col-md-6 home-about-right">
 							<h1 class="text-uppercase">Personal Details</h1>
 							<p>
-								I aspire to build amazing things. I fit the pieces together to make connectable machine learning models that make web applications smarter.
+								Hi. My name is Harrison, and I build amazing things.
 							</p>
 							<a href="#FAQ" class="primary-btn text-uppercase">More About Me</a>
 						</div>
@@ -95,11 +95,15 @@
 
 						<div class="col-lg-12 pt-60">
 							<p>
-								I am currently a graduate student at University of Texas at Dallas studying Computer Science. After graduating from Baylor University with a bachelors in mathematics and business, I moved to Plano, Texas. Since then I have been on a self guided curriculum, learning about machine learning algorithms, computer vision, and software architecture.
+								I am a graduate student and researcher at the University of Texas at Dallas. I am passionate about machine learning, computer vision, and web app development.	In my spare time I build websites, read research papers, and play Overwatch. I also exercise regularly and play with my german shepherd, Huckleberry.
 							</p>
 							<p>
-								I am currently focusing my studies on the recent advancements in computer vision utilizing deep learning. Particularly the use of convolutional neural networks for video understanding. Over the next few months I hope to implement convnets in RESTful web services and drone flight control programs.
+								I love every part of web application development. From creating functional interfaces to deploying and maintaining the servers that power them. I also love the mathematics and power of machine learning. Spending a majority of my time learning how to apply what I learn to production. In the future I will move into a role in the tech industry. A position where I could gain experience as a developer, as well as a machine learning engineer.
 							</p>
+							<p>
+								If you would like to know more, I have included a question and answer section below. Feel free to message me if you have project ideas, want to collaborate, or even just want to say hi!
+							</p>
+
 
 						</div>
 					</div>
