--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 							<br>
 
 							<blockquote class="generic-blockquote">
-								<p>I am passionate about applying new technologies to create amazing things. Siri, Google Assistant, and Amazon Alexa are all examples of what dedicated and curious people can achieve in the dizzying advancements of our time. With a strong understanding of mathematics and rich experiences in computer vision, I aim to be part of the team of makers and innovators.
+								<p>I am passionate about applying new technologies to create amazing things. Siri, Google Assistant, and Amazon Alexa are all examples of what dedicated and curious people can achieve in the dizzying advancements of our time. With a strong understanding of mathematics and rich experiences in machine learning, I aim to be part of the team of makers and innovators.
 							</p>
 							</blockquote>
 							<a href="about.html" class="primary-btn text-uppercase">About me</a>
