--- a/portfolio.html
+++ b/portfolio.html
@@ -106,14 +106,14 @@
 													<div class="overlay overlay-bg"></div>
 													 <img class="image img-fluid" src="img/sig4square.png" alt="">
 												</div>
-										<a href="batchnorm.html">
+										<a href="https://towardsdatascience.com/intuit-and-implement-batch-normalization-c05480333c5b" target="_blank">
 										<div class="middle">
 										<div class="text align-self-center d-flex"><img src="img/preview.png" alt=""></div>
 										</div>
 										</a>
 											</div>
 										<div class="p-inner">
-										<a href="batchnorm.html">
+										<a href="https://towardsdatascience.com/intuit-and-implement-batch-normalization-c05480333c5b" target="_blank">
 										<h5>Batch Normalization: Implement and Intuit</h5></a>
 										<div class="cat">July 27, 2018</div>
 										</div>
